--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <main class="container">
         <div class="article__container">
-                 <img class="drawer__img" src="/assets/img/drawers.jpg" alt="">
+                 <img class="drawer__img" src="/assets/img/drawers.jpg" alt="drawer">
 
             <div class="review">
                 <h3>Shift the overall look and feel by adding these wonderful touches to furniture in your home</h3>
@@ -31,16 +31,16 @@
                     <img src="/assets/img/avatar-michelle.jpg" alt="">
                     <h4>Michelle Appleton</h4>
                     <span>28 Jun 2020</span>
-                    <button class="btn__share click" id="btn__share"><i class='bx bxs-share bx-flip-horizontal' ></i></button>
+                    <button class="btn__share" id="btn__share"><i class='bx bxs-share bx-flip-horizontal' ></i></button>
                     
                 </div>
 
                 <div class="share">
                     <div class="social__icons">
                     <h3>SHARE</h3>
-                    <a class="facebook" href="#"><img src="/assets/img/icon-facebook.svg" alt=""></a>
-                    <a class="twitter" href="#"><img src="/assets/img/icon-twitter.svg" alt=""></a>
-                    <a class="pinterest" href="#"><img src="/assets/img/icon-pinterest.svg" alt=""></a>
+                    <a class="facebook" href="#"><img src="/assets/img/icon-facebook.svg" alt="facebook"></a>
+                    <a class="twitter" href="#"><img src="/assets/img/icon-twitter.svg" alt="twitter"></a>
+                    <a class="pinterest" href="#"><img src="/assets/img/icon-pinterest.svg" alt="pinterest"></a>
                     </div>
                 </div>
             </div>
