--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <img src="/assets/img/avatar-michelle.jpg" alt="">
                     <h4>Michelle Appleton</h4>
                     <span>28 Jun 2020</span>
-                    <button class="btn__share" id="btn__share"><i class='bx bxs-share bx-flip-horizontal' ></i></button>
+                    <button class="btn__share" name="share_button" id="btn__share"><i class='bx bxs-share bx-flip-horizontal' ></i></button>
                     
                 </div>
 
